[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.0",
    "spotipy>=2.25.1",
    "streamlit>=1.45.0",
]
